--- a/index.html
+++ b/index.html
@@ -147,98 +147,210 @@
           <div class="card-body p-4">
             <div class="row mb-4 align-items-center">
               <label for="tipoMoneda" class="col-sm-4 form-label"><i class="fas fa-coins me-2 text-danger"></i>Tipo de Moneda</label>
-              <div class="col-sm-8"><select id="tipoMoneda" class="form-select" onchange="cambiarMoneda()"><option value="COP" selected>Pesos Colombianos (COP)</option><option value="USD">Dólares Americanos (USD)</option></select></div>
+              <div class="col-sm-8">
+                <select id="tipoMoneda" class="form-select" onchange="cambiarMoneda()">
+                  <option value="COP" selected>Pesos Colombianos (COP)</option>
+                  <option value="USD">Dólares Americanos (USD)</option>
+                </select>
+              </div>
             </div>
-            <div id="trmInfo" class="mb-4" style="display:none"><div class="alert alert-info d-flex flex-column"><strong>TRM:</strong> $<span id="trmValue">0,00</span> COP por USD<small id="trmFecha" style="opacity:.8; margin-top:.25rem"></small></div></div>
+            <div id="trmInfo" class="mb-4" style="display:none">
+              <div class="alert alert-info d-flex flex-column">
+                <strong>TRM:</strong> $<span id="trmValue">0,00</span> COP por USD
+                <small id="trmFecha" style="opacity:.8; margin-top:.25rem"></small>
+              </div>
+            </div>
             <div class="row mb-4 align-items-center">
               <label for="costoBruto" class="col-sm-4 form-label"><i class="fas fa-dollar-sign me-2 text-danger"></i>Costo Bruto</label>
               <div class="col-sm-8">
-                <div class="input-group"><span class="input-group-text" id="simboloMoneda">$</span><input type="number" id="costoBruto" class="form-control" min="0" step="0.01" oninput="mostrarConversion()"><span class="input-group-text" id="codigoMoneda">COP</span></div>
+                <div class="input-group">
+                  <span class="input-group-text" id="simboloMoneda">$</span>
+                  <input type="number" id="costoBruto" class="form-control" min="0" step="0.01" oninput="mostrarConversion()">
+                  <span class="input-group-text" id="codigoMoneda">COP</span>
+                </div>
                 <div class="form-text" id="textoAyuda">Ingrese el costo base en pesos</div>
-                <div id="conversionEnVivo" class="mt-2" style="display:none"><div class="alert alert-secondary py-2"><small><strong>Conversión a COP:</strong> $<span id="valorConvertido">0,00</span></small></div></div>
+                <div id="conversionEnVivo" class="mt-2" style="display:none">
+                  <div class="alert alert-secondary py-2">
+                    <small><strong>Conversión a COP:</strong> $<span id="valorConvertido">0,00</span></small>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="row mb-4 align-items-center">
               <label for="rentabilidad" class="col-sm-4 form-label"><i class="fas fa-percentage me-2 text-danger"></i>Rentabilidad</label>
               <div class="col-sm-8"><select id="rentabilidad" class="form-select"></select></div>
             </div>
-            <div class="row"><div class="col-md-6 mb-3"><button class="btn btn-calculate w-100" onclick="calcularPrecio()"><i class="fas fa-calculator me-2"></i>Calcular Precio</button></div><div class="col-md-6 mb-3"><button class="btn btn-reset w-100" onclick="resetForm()"><i class="fas fa-refresh me-2"></i>Limpiar</button></div></div>
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <button class="btn btn-calculate w-100" onclick="calcularPrecio()"><i class="fas fa-calculator me-2"></i>Calcular Precio</button>
+              </div>
+              <div class="col-md-6 mb-3">
+                <button class="btn btn-reset w-100" onclick="resetForm()"><i class="fas fa-refresh me-2"></i>Limpiar</button>
+              </div>
+            </div>
             <div id="resultados" class="result-card" style="display:none">
-              <div class="text-center mb-3"><div class="icon-container"><i class="fas fa-receipt text-white fa-2x"></i></div><h4>Desglose de Costos</h4></div>
-              <div class="result-item"><span><i class="fas fa-box me-2"></i>Costo Bruto:</span><span class="currency" id="mostrarCostoBruto">$0,00 COP</span></div>
-              <div class="result-item" id="filaConversion" style="display:none"><span><i class="fas fa-exchange-alt me-2"></i>Costo Original (USD):</span><span class="currency" id="mostrarCostoUSD">$0,00 USD</span></div>
-              <div class="result-item"><span><i class="fas fa-chart-line me-2"></i>Rentabilidad (<span id="mostrarPorcentaje">0</span>%):</span><span class="currency" id="mostrarRentabilidad">$0,00 COP</span></div>
-              <div class="result-item"><span><i class="fas fa-bullhorn me-2"></i>Publicidad (2%):</span><span class="currency" id="mostrarPublicidad">$0,00 COP</span></div>
-              <div class="result-item"><span><i class="fas fa-cube me-2"></i>Costo de Empaque:</span><span class="currency">$1 000 COP</span></div>
-              <div class="result-item"><span><i class="fas fa-truck me-2"></i>Costo de Envío:</span><span class="currency">$25 000 COP</span></div>
-              <div class="result-item"><span><i class="fas fa-tags me-2"></i><strong>Precio en efectivo:</strong></span><span class="currency" id="precioEfectivo">$0,00 COP</span></div>
-              <div class="result-item"><span><i class="fas fa-credit-card me-2"></i><strong>Precio con tarjeta:</strong></span><span class="currency" id="precioTarjeta">$0,00 COP</span></div>
+              <div class="text-center mb-3">
+                <div class="icon-container"><i class="fas fa-receipt text-white fa-2x"></i></div>
+                <h4>Desglose de Costos</h4>
+              </div>
+              <div class="result-item">
+                <span><i class="fas fa-box me-2"></i>Costo Bruto:</span>
+                <span class="currency" id="mostrarCostoBruto">$0,00 COP</span>
+              </div>
+              <div class="result-item" id="filaConversion" style="display:none">
+                <span><i class="fas fa-exchange-alt me-2"></i>Costo Original (USD):</span>
+                <span class="currency" id="mostrarCostoUSD">$0,00 USD</span>
+              </div>
+              <div class="result-item">
+                <span><i class="fas fa-chart-line me-2"></i>Rentabilidad (<span id="mostrarPorcentaje">0</span>%):</span>
+                <span class="currency" id="mostrarRentabilidad">$0,00 COP</span>
+              </div>
+              <div class="result-item">
+                <span><i class="fas fa-bullhorn me-2"></i>Publicidad (2%):</span>
+                <span class="currency" id="mostrarPublicidad">$0,00 COP</span>
+              </div>
+              <!-- Nuevo: Impuestos 7.5% -->
+              <div class="result-item">
+                <span><i class="fas fa-receipt me-2"></i>Impuestos (7.5%):</span>
+                <span class="currency" id="mostrarImpuestos">$0,00 COP</span>
+              </div>
+              <div class="result-item">
+                <span><i class="fas fa-cube me-2"></i>Costo de Empaque:</span>
+                <span class="currency">$1 000 COP</span>
+              </div>
+              <div class="result-item">
+                <span><i class="fas fa-truck me-2"></i>Costo de Envío:</span>
+                <span class="currency">$25 000 COP</span>
+              </div>
+              <div class="result-item">
+                <span><i class="fas fa-tags me-2"></i><strong>Precio en efectivo:</strong></span>
+                <span class="currency" id="precioEfectivo">$0,00 COP</span>
+              </div>
+              <div class="result-item">
+                <span><i class="fas fa-credit-card me-2"></i><strong>Precio con tarjeta:</strong></span>
+                <span class="currency" id="precioTarjeta">$0,00 COP</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <footer class="text-center py-4" style="background: var(--vitrina-dark); color: white;"><div class="container"><p class="mb-0">© 2025 Vitrina Inc. Todos los derechos reservados.</p></div></footer>
+  <footer class="text-center py-4" style="background: var(--vitrina-dark); color: white;">
+    <div class="container">
+      <p class="mb-0">© 2025 Vitrina Inc. Todos los derechos reservados.</p>
+    </div>
+  </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script>
-    let TRM=0, currentTipo='COP', costoEmpaque=1000, costoEnvio=25000;
+    let TRM = 0, currentTipo = 'COP', costoEmpaque = 1000, costoEnvio = 25000;
+
     async function cargarTRM(){
-      try{
-        const res=await fetch('trm.json',{cache:'no-store'}), data=await res.json();
-        TRM=data.trm;
-        document.getElementById('trmFecha').textContent=new Date(data.updated_at).toLocaleString('es-CO',{dateStyle:'short',timeStyle:'short'});
-      }catch(e){console.error(e);}
-      document.getElementById('trmValue').textContent=TRM.toLocaleString('es-CO',{minimumFractionDigits:2,maximumFractionDigits:2});
+      try {
+        const res = await fetch('trm.json',{cache:'no-store'}), data = await res.json();
+        TRM = data.trm;
+        document.getElementById('trmFecha').textContent =
+          new Date(data.updated_at)
+            .toLocaleString('es-CO',{dateStyle:'short',timeStyle:'short'});
+      } catch(e) {
+        console.error(e);
+      }
+      document.getElementById('trmValue').textContent =
+        TRM.toLocaleString('es-CO',{minimumFractionDigits:2,maximumFractionDigits:2});
     }
+
     function llenarRentabilidad(){
-      const sel=document.getElementById('rentabilidad'); sel.innerHTML='';
-      const opc=document.createElement('option'); opc.value=''; opc.text='Seleccione porcentaje'; sel.append(opc);
-      for(let i=20;i<=200;i+=5){const o=document.createElement('option'); o.value=i; o.text=i+'%'; sel.append(o);}    }
+      const sel = document.getElementById('rentabilidad');
+      sel.innerHTML = '';
+      const opc = document.createElement('option');
+      opc.value = '';
+      opc.text = 'Seleccione porcentaje';
+      sel.append(opc);
+      for(let i = 20; i <= 200; i += 5){
+        const o = document.createElement('option');
+        o.value = i;
+        o.text = i + '%';
+        sel.append(o);
+      }
+    }
+
     function cambiarMoneda(){
-      const n=document.getElementById('tipoMoneda').value;
-      const inp=document.getElementById('costoBruto'); let v=parseFloat(inp.value)||0;
-      if(v>0&&n!==currentTipo){v=n==='USD'?v/TRM:v*TRM; inp.value=v.toFixed=(()=>v.toFixed(2));}
-      currentTipo=n;
-      document.getElementById('simboloMoneda').textContent='$';
-      document.getElementById('codigoMoneda').textContent=n;
-      document.getElementById('trmInfo').style.display=n==='USD'?'block':'none';
-      document.getElementById('conversionEnVivo').style.display=n==='USD'?'block':'none';
-      document.getElementById('textoAyuda').textContent=n==='USD'?'Ingrese el costo en dólares':'Ingrese el costo base en pesos';
+      const n = document.getElementById('tipoMoneda').value;
+      const inp = document.getElementById('costoBruto');
+      let v = parseFloat(inp.value) || 0;
+      if(v > 0 && n !== currentTipo){
+        v = n === 'USD' ? v / TRM : v * TRM;
+        inp.value = v.toFixed(2);
+      }
+      currentTipo = n;
+      document.getElementById('simboloMoneda').textContent = '$';
+      document.getElementById('codigoMoneda').textContent = n;
+      document.getElementById('trmInfo').style.display = n === 'USD' ? 'block' : 'none';
+      document.getElementById('conversionEnVivo').style.display = n === 'USD' ? 'block' : 'none';
+      document.getElementById('textoAyuda').textContent =
+        n === 'USD' ? 'Ingrese el costo en dólares' : 'Ingrese el costo base en pesos';
       mostrarConversion();
     }
+
     function mostrarConversion(){
-      const v=parseFloat(document.getElementById('costoBruto').value)||0;
-      document.getElementById('valorConvertido').textContent=currentTipo==='USD'&&v>0?(v*TRM).toLocaleString('es-CO',{minimumFractionDigits:2,maximumFractionDigits:2}):'0,00';
+      const v = parseFloat(document.getElementById('costoBruto').value) || 0;
+      document.getElementById('valorConvertido').textContent =
+        currentTipo === 'USD' && v > 0
+          ? (v * TRM).toLocaleString('es-CO',{minimumFractionDigits:2,maximumFractionDigits:2})
+          : '0,00';
     }
+
     function calcularPrecio(){
-      const bruto=parseFloat(document.getElementById('costoBruto').value), pct=parseInt(document.getElementById('rentabilidad').value);
-      if(!bruto||!pct){return alert('Complete todos los campos.');}
-      const brutoCOP=currentTipo==='USD'?bruto*TRM:bruto;
-      const renta=brutoCOP*(pct/100);
-      const pub=brutoCOP*0.02;
-      const efectivo=brutoCOP+renta+pub+costoEmpaque+costoEnvio;
-      const tarjeta=efectivo*1.0523; // Efectico + 5.23% de recargo
-      document.getElementById('mostrarCostoBruto').textContent='$'+brutoCOP.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP';
-      document.getElementById('mostrarPorcentaje').textContent=pct;
-      document.getElementById('mostrarRentabilidad').textContent='$'+renta.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP';
-      document.getElementById('mostrarPublicidad').textContent='$'+pub.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP';
-      document.getElementById('precioEfectivo').textContent='$'+efectivo.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP';
-      document.getElementById('precioTarjeta').textContent='$'+tarjeta.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP';
-      document.getElementById('filaConversion').style.display=currentTipo==='USD'?'grid':'none';
-      document.getElementById('mostrarCostoUSD').textContent='$'+bruto.toLocaleString('es-CO',{minimumFractionDigits:2})+' USD';
-      document.getElementById('resultados').style.display='block';
+      const bruto = parseFloat(document.getElementById('costoBruto').value),
+            pct   = parseInt(document.getElementById('rentabilidad').value);
+      if(!bruto || !pct){
+        return alert('Complete todos los campos.');
+      }
+      const brutoCOP = currentTipo === 'USD' ? bruto * TRM : bruto;
+      const renta    = brutoCOP * (pct / 100);
+      const pub      = brutoCOP * 0.02;
+      const impuesto = brutoCOP * 0.075;  // nuevo
+      const efectivo = brutoCOP + renta + pub + impuesto + costoEmpaque + costoEnvio;
+      const tarjeta  = efectivo * 1.0523;
+
+      document.getElementById('mostrarCostoBruto').textContent  =
+        '$' + brutoCOP.toLocaleString('es-CO',{minimumFractionDigits:2}) + ' COP';
+      document.getElementById('mostrarPorcentaje').textContent   = pct;
+      document.getElementById('mostrarRentabilidad').textContent =
+        '$' + renta.toLocaleString('es-CO',{minimumFractionDigits:2}) + ' COP';
+      document.getElementById('mostrarPublicidad').textContent   =
+        '$' + pub.toLocaleString('es-CO',{minimumFractionDigits:2}) + ' COP';
+
+      // mostrar impuestos
+      document.getElementById('mostrarImpuestos').textContent    =
+        '$' + impuesto.toLocaleString('es-CO',{minimumFractionDigits:2}) + ' COP';
+
+      document.getElementById('precioEfectivo').textContent      =
+        '$' + efectivo.toLocaleString('es-CO',{minimumFractionDigits:2}) + ' COP';
+      document.getElementById('precioTarjeta').textContent       =
+        '$' + tarjeta.toLocaleString('es-CO',{minimumFractionDigits:2}) + ' COP';
+      document.getElementById('filaConversion').style.display    =
+        currentTipo === 'USD' ? 'grid' : 'none';
+      document.getElementById('mostrarCostoUSD').textContent     =
+        '$' + bruto.toLocaleString('es-CO',{minimumFractionDigits:2}) + ' USD';
+      document.getElementById('resultados').style.display        = 'block';
     }
+
     function resetForm(){
-      document.getElementById('costoBruto').value='';
-      document.getElementById('rentabilidad').value='';
-      document.getElementById('resultados').style.display='none';
-      document.getElementById('trmInfo').style.display='none';
-      document.getElementById('conversionEnVivo').style.display='none';
-      document.getElementById('tipoMoneda').value='COP';
+      document.getElementById('costoBruto').value = '';
+      document.getElementById('rentabilidad').value = '';
+      document.getElementById('resultados').style.display = 'none';
+      document.getElementById('trmInfo').style.display    = 'none';
+      document.getElementById('conversionEnVivo').style.display = 'none';
+      document.getElementById('tipoMoneda').value = 'COP';
       cambiarMoneda();
     }
-    window.addEventListener('DOMContentLoaded', async()=>{ await cargarTRM(); llenarRentabilidad(); cambiarMoneda(); });
+
+    window.addEventListener('DOMContentLoaded', async ()=>{
+      await cargarTRM();
+      llenarRentabilidad();
+      cambiarMoneda();
+    });
   </script>
 </body>
 </html>
